<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/te2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="71dp">

            <TextView
                android:id="@+id/t12"
                android:layout_width="match_parent"
                android:layout_height="33dp"

                android:text="@string/sub_9"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/te3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="140dp">

            <TextView
                android:id="@+id/m13"
                android:layout_width="match_parent"
                android:layout_height="33dp"

                android:text="@string/sub_9"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/te4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="168dp">

            <TextView
                android:id="@+id/m14"
                android:layout_width="match_parent"
                android:layout_height="33dp"

                android:text="@string/sub_7"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/te5"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="243dp">

            <TextView
                android:id="@+id/m15"
                android:layout_width="match_parent"
                android:layout_height="33dp"

                android:text="@string/sub_3"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_2"
            app:srcCompat="@drawable/lunch"

            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout
            android:id="@+id/te1"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="31dp">

            <TextView
                android:id="@+id/m16"
                android:layout_width="match_parent"
                android:layout_height="33dp"

                android:text="@string/sub_9"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/te6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="353dp">

            <TextView
                android:id="@+id/m17"
                android:layout_width="match_parent"
                android:layout_height="33dp"

                android:text="@string/sub_11"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/te7"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="444dp">

            <TextView
                android:id="@+id/m18"
                android:layout_width="match_parent"
                android:layout_height="33dp"

                android:text="@string/sub_11"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/te8"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="413dp">

            <TextView
                android:id="@+id/m19"
                android:layout_width="match_parent"
                android:layout_height="33dp"

                android:text="@string/sub_11"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        </LinearLayout>
    </LinearLayout></RelativeLayout>

