<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.manoranjank.iceb.Attendance">



    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">


            <android.support.v7.widget.CardView
                android:id="@+id/sub1"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

                <TextView
                    android:id="@+id/sub1t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/sub_7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textSize="22sp"
                    tools:text="@string/sub_7" />

                <TextView
                    android:id="@+id/att1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/error"

                    android:textColor="@color/text1"
                    android:textSize="18sp" />
</LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/sub2"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                <TextView
                    android:id="@+id/sub2t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/sub_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"

                    android:textSize="22sp"
                    tools:text="@string/sub_3" />

                <TextView
                    android:id="@+id/att2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/error"
                    android:textColor="@color/text1"
                    android:textSize="18sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/sub3"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"

                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                <TextView
                    android:id="@+id/sub3t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/sub_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textSize="22sp"
                    tools:text="@string/sub_2" />

                <TextView
                    android:id="@+id/att3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/error"
                    android:textColor="@color/text1"

                    android:textSize="18sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/sub4"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"

                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/sub4t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/sub_5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textSize="22sp"
                    tools:text="@string/sub_5" />

                <TextView
                    android:id="@+id/att4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/error"
                    android:textColor="@color/text1"

                    android:textSize="18sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/sub5"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"

                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                <TextView
                    android:id="@+id/sub5t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/sub_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textSize="22sp"
                    tools:text="@string/sub_4" />

                <TextView
                    android:id="@+id/att5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/error"

                    android:textColor="@color/text1"
                    android:textSize="18sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/sub6"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"

                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/sub6t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="2dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textSize="22sp"
                                            />

                <TextView
                    android:id="@+id/att6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/text1"
                    android:textSize="18sp"
                    android:text="@string/error"
                    />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
